--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
@@ -38,6 +39,7 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
+    "ajv": "^7.2.4",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
