--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
   },
   "plugins": ["@typescript-eslint", "react"],
   "rules": {
-    "react/react-in-jsx-scope": 0
+    "react/react-in-jsx-scope": 0,
+    "react/no-unknown-property": ["error", { "ignore": ["jsx"] }]
   }
 }
