--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.7",
     "next": "14.1.0",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "zustand": "^4.5.1"
@@ -36,6 +37,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
