--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@typescript-eslint/parser": "^7.0.2",
     "ajv": "^7.2.4",
     "autoprefixer": "^10.0.1",
+    "classnames": "^2.5.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
